15938
=== What steps will reproduce the problem? ===
{code}
 ~/code/scratch/kind-conformance: cat A.scala 
trait A[OUT[_]] {
  null.asInstanceOf[B[OUT]].b1("")
}
 ~/code/scratch/kind-conformance: cat B.scala 
 trait B[OUT[_]] {
  def b1[A](a: A) = b2[OUT]
  def b2[OUT1[_]] = ()
}

{code} 

=== What is the expected behavior? ===

{code}
 ~/code/scratch/kind-conformance: scalac A.scala B.scala 
 ~/code/scratch/kind-conformance: scalac -version
Scala compiler version 2.8.1.final -- Copyright 2002-2010, LAMP/EPFL
 ~/code/scratch/kind-conformance:  ~/usr/scala-2.9.0.r24145-b20110130020134/bin/scalac B.scala A.scala 
{code}

=== What do you see instead? ===

With 2.9.0-SNAPSHOT, if the compilation order is reversed:

{code}
 ~/code/scratch/kind-conformance:  ~/usr/scala-2.9.0.r24145-b20110130020134/bin/scalac A.scala B.scala 
B.scala:2: error: kinds of the type arguments (OUT) do not conform to the expected kinds of the type parameters (type OUT1).
OUT's type parameters do not match type OUT1's expected parameters: <none>'s bounds <notype> are stricter than type _'s declared bounds >: Nothing <: Any
  def b1[A](a: A) = b2[OUT]
                      ^
one error found
{code}

=== Additional information ===
Found this in scalaz-http.

Setting a breakpoint at `Types:5600`, showed

`val tparamsHO =  targ.typeParams`

results in `List(<no symbol)`

=== What versions of the following are you using? ===
  - Scala: scala-2.9.0.r24145-b20110130020134
